--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react-router": "^7.9.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
@@ -24,6 +24,7 @@
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-router": "^5.1.20",
     "@vitejs/plugin-react": "^5.0.3",
     "babel-plugin-react-compiler": "^19.1.0-rc.3",
     "eslint": "^9.36.0",
