--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "tsc",
-        "start": "node dist/index.js"
+        "build": "npx tsc -b",
+        "start": "bun --hot run src/index.ts"
     },
     "keywords": [],
     "author": "",
@@ -12,6 +12,7 @@
     "description": "",
     "dependencies": {
         "express": "^5.1.0",
+        "mongoose": "^8.18.3",
         "typescript": "^5.9.2"
     },
     "type": "module",
