--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "main": "index.js",
     "scripts": {
         "build": "npx tsc -b",
-        "start": "bun --hot run src/index.ts"
+        "dev": "bun --hot run src/index.ts"
     },
     "keywords": [],
     "author": "",
