--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "cors": "^2.8.5",
         "express": "^5.1.0",
         "mongoose": "^8.18.3",
+        "react-icons": "^5.5.0",
         "typescript": "^5.9.2"
     },
     "type": "module",
