--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.2.2",
+        "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@reduxjs/toolkit": "^2.9.0",
         "@tailwindcss/vite": "^4.1.13",
@@ -17,11 +19,13 @@
         "clsx": "^2.1.1",
         "lucide-react": "^0.544.0",
         "react": "^19.1.1",
+        "react-hook-form": "^7.63.0",
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "react-router": "^7.9.3",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.13"
+        "tailwindcss": "^4.1.13",
+        "zod": "^4.1.11"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
