--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "backend",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
         "build": "npx tsc -b",
         "dev": "bun --hot run src/index.ts"
@@ -22,10 +22,16 @@
     "type": "module",
     "devDependencies": {
         "@types/bcrypt": "^6.0.0",
+        "@types/cookie": "^0.6.0",
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/jsonwebtoken": "^9.0.10",
         "nodemon": "^3.1.10",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "@types/bun": "latest"
+    },
+    "private": true,
+    "peerDependencies": {
+        "typescript": "^5"
     }
 }
