--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "@tailwindcss/vite": "^4.1.13",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "js-cookie": "^3.0.5",
         "lucide-react": "^0.544.0",
         "react": "^19.1.1",
         "react-hook-form": "^7.63.0",
@@ -29,6 +30,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
+        "@types/js-cookie": "^3.0.6",
         "@types/node": "^24.6.0",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
